# labs

./: .gitignore  README.md
ITiROD/: .gitignore  README.md  firebase.json
ITiROD/src/: animations.css  app.js  index.css  index.html  index.js  renderer.js  router.js
term2/OAiP/: LAB_4.cpp  LAB_5.cpp  LAB_6.cpp  LAB_7.cpp  Unit1.cpp  Unit1.h  Unit2.cpp  Unit2.h  Unit3.cpp  Unit3.h  Unit4.cpp  Unit4.h  Unit5.cpp  Unit5.h  Unit6.cpp  Unit6.h  Unit7.cpp  Unit7.h  Unit8.cpp  Unit8.h  Unit9.cpp  Unit9.h
term2/course_work/: Program.cs
term3/ISP/: GameStore.sln  README.md
term3/MMA/: README.md  lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  lab6.mw  lab7.mw  lab8.mw
term3/MSiSvIT/: Program.cs  README.md  kotlin_sample.txt  sample.txt
term3/Programmirovanie/: README.md  lab1.asm  lab2.asm  lab3.asm  lab4.asm  lab6.asm  lab7.cpp
term4/AVS/: README.md  lab3.cpp  lab4.cpp
term4/AiSD/: 1.cpp  12.cpp  13.cpp  14.cpp  15.py  16.py  17.py  18.cpp  19.cpp  2.py  3.py  4.py  5.cpp  7.py  8.cpp  9.cpp  README.md
term4/ISP/: README.md  card_game.py
term4/MNA/: README.md  lab1.py  lab2.py  lab3.py  lab4.py  lab5.ipynb  lab6.ipynb  lab7.ipynb
term4/OOP/: .gitignore  README.md  db.sqlite3  frontend.py  library_base_classes.py  manage.py
term4/TViMS/: Untitled.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
term5/AVS/: README.md  avs1.asm
term5/AVS/avs2/: CMakeLists.txt
term5/AVS/avs2/task1/: atomic_counter.cpp  mutex_counter.cpp
term5/AVS/avs2/task2/: dynamic_mutex_queue.cpp  fixed_size_mutex_queue.cpp  flixed_size_atomic_queue.cpp
term5/IGI/: .gitignore  (+10 more)
(+841 files in other folders)
